--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "gsap": "^3.5.1",
     "three": "^0.122.0",
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0"
